src/styles/pages/home-page.scss
// Home page styles
@import 'master-page';

.text-pink {
    color: $pink;
}

.text-gray {
    color: $gray;
}

.border-2 {
    border-width: $size-xs !important;
}

.icon-lg {
    font-size: $size-xl;
}

.icon-md {
    font-size: $size-lg;
}

.nav-item button {
    &:hover {
        background-color: $light-gray;
    }
}

.glimmer {
    position: absolute;
    top: -$size-md;
    left: -$size-md;
}

@media (max-width: $break-point-lg) {
    .table {
        thead {
            display: none;
        }

        tr {
            display: block;
            border-radius: $size-md;
            background-color: $light-gray;
            margin-bottom: $size-xxl;
        }

        td {
            display: flex;
            flex-wrap: wrap;
            margin: $size-sm;
            background-color: $white;
            align-items: center;

            &:first-child {
                background-color: $light-gray;
                justify-content: space-between;
            }

            &:last-child {
                display: none;
            }

            &::before {
                content: attr(data-label);
                font-weight: $bold;
                font-style: italic;
                display: inline-block;
                width: 20%;
                text-align: left !important;
            }
        }
    }
}

